# opc-ceo-assistant

./: .gitignore  OPC_CEO_stage1_agent_skill_plan.md  OPC_CEO_stage1_implementation_plan.md  OPC_CEO_stage1_minimum_assistant_configuration.md  README.md  TODOS.md  pyproject.toml
docs/superpowers/plans/: 2026-06-20-workspace-status-reconstruction.md
docs/superpowers/specs/: 2026-06-20-workspace-status-reconstruction-design.md
evals/: __init__.py  rubric.json  run.py  verify_output.py
evals/cases/: 01-normal-zh-cn.json  02-normal-en.json  03-normal-bilingual.json  04-empty.json  05-p0a-decline.json  06-degraded-row.json  07-conflict-review.json  08-stale-within-limit.json  09-stale-too-old.json  10-malformed-disposition.json
evidence/: benchmark-v1.json  canary-v1.json  connector-capability-v1.json  connector-live-v1.json  evals-v1.json
skills/opc-ceo-office/: SKILL.md
skills/opc-ceo-office/agents/: openai.yaml
skills/opc-sales-pipeline/: SKILL.md
spikes/: __init__.py  canary.py  connector_capability.py
src/opc_ceo/: __init__.py  benchmark.py  briefing.py  cli.py  config.py  contracts.py  diagnostics.py  domain_versions.py  installer.py  intake.py  workspace.py
tests/integration/: test_briefing_workflow.py  test_cli_installer.py  test_import_workflow.py
tests/unit/: test_benchmark.py  test_boundaries.py  test_briefing_boundaries.py  test_canary_harness.py  test_cli_dispatch.py  test_contracts.py  test_domain_versions.py  test_eval_harness.py  test_fault_points.py  test_intake_boundaries.py  test_status_reconstruction.py  test_workspace.py
(+8 files in other folders)
