[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opc-ceo"
version = "0.2.0"
description = "Local-first OPC CEO office workspace and decision loop"
requires-python = ">=3.12,<3.13"
dependencies = [
  "jsonschema>=4.23,<5",
  "openpyxl>=3.1.5,<4",
]

[project.scripts]
opc-workspace = "opc_ceo.cli:main"

[dependency-groups]
dev = [
  "hypothesis>=6.130,<7",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "pyyaml>=6,<7",
  "ruff>=0.11,<1",
  "types-openpyxl>=3.1.5,<4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opc_ceo"]

[tool.hatch.build.targets.wheel.force-include]
"skills/opc-ceo-office" = "opc_ceo/bundled_skill/opc-ceo-office"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["opc_ceo"]

[tool.coverage.run]
branch = true
source = ["opc_ceo"]

[tool.coverage.report]
show_missing = true
skip_covered = true
